--- a/main.tex
+++ b/main.tex
@@ -2,16 +2,24 @@
 % \documentclass[11pt,openany,oneside]{book}
 
 \usepackage{amssymb}		% to get all AMS symbols
+\usepackage{amsmath}
 \usepackage{graphicx}		% to insert figures
 \usepackage{hyperref}		% PDF hyperreferences??
 \usepackage{todonotes}
 \usepackage{comment}
+\usepackage{threeparttable}
+\usepackage{booktabs} 
+\usepackage{bbm}
 
+
+\newcommand{\libauto}{\texttt{librec-auto}}
 %%%%%%%%%%%%   All the preamble material:   %%%%%%%%%%%%
+
+% \newcommand{\dtitle}{Controlling the Fairness Accuracy Tradeoff in Recommender Systems}
+% \begin{document}
 
 \title{Controlling the Fairness Accuracy Tradeoff in Recommender Systems}
 
-% \begin{document}
 
 \author{Nasim}{Sonboli}
 
