--- a/refs_libauto.bib
+++ b/refs_libauto.bib
@@ -1,232 +1,4 @@
-@inproceedings{mansoury2018automating,
-  title={Automating recommender systems experimentation with librec-auto},
-  author={Mansoury, Masoud and Burke, Robin and Ordonez-Gauger, Aldo and Sepulveda, Xavier},
-  booktitle={Proceedings of the 12th ACM Conference on Recommender Systems},
-  pages={500--501},
-  year={2018}
-}
-@inproceedings{guo2015librec,
-  title={LibRec: A Java Library for Recommender Systems.},
-  author={Guo, Guibing and Zhang, Jie and Sun, Zhu and Yorke-Smith, Neil},
-  booktitle={UMAP Workshops},
-  volume={4},
-  year={2015}
-}
 
-@inproceedings{zehlike2017fa,
-  title={Fa* ir: A fair top-k ranking algorithm},
-  author={Zehlike, Meike and Bonchi, Francesco and Castillo, Carlos and Hajian, Sara and Megahed, Mohamed and Baeza-Yates, Ricardo},
-  booktitle={Proceedings of the 2017 ACM on Conference on Information and Knowledge Management},
-  pages={1569--1578},
-  year={2017}
-}
-
-
-@inproceedings{santos2010explicit,
-  title={Explicit search result diversification through sub-queries},
-  author={Santos, Rodrygo LT and Peng, Jie and Macdonald, Craig and Ounis, Iadh},
-  booktitle={European conference on information retrieval},
-  pages={87--99},
-  year={2010},
-  organization={Springer}
-}
-
-@inproceedings{liu2019farpfar,
-author = {Liu, Weiwen and Guo, Jun and Sonboli, Nasim and Burke, Robin and Zhang, Shengyu},
-title = {Personalized Fairness-Aware Re-Ranking for Microlending},
-year = {2019},
-isbn = {9781450362436},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3298689.3347016},
-doi = {10.1145/3298689.3347016},
-booktitle = {Proceedings of the 13th ACM Conference on Recommender Systems},
-pages = {467–471},
-numpages = {5},
-keywords = {re-ranking, loan recommendation, fairness-aware re-ranking},
-location = {Copenhagen, Denmark},
-series = {RecSys ’19}
-}
-
-@inproceedings{carbonell1998use,
-  title={The use of MMR, diversity-based reranking for reordering documents and producing summaries},
-  author={Carbonell, Jaime and Goldstein, Jade},
-  booktitle={Proceedings of the 21st annual international ACM SIGIR conference on Research and development in information retrieval},
-  pages={335--336},
-  year={1998}
-}
-
-@inproceedings{sonboli2020opportunistic,
-  title={Opportunistic Multi-aspect Fairness through Personalized Re-ranking},
-  author={Sonboli, Nasim and Eskandanian, Farzad and Burke, Robin and Liu, Weiwen and Mobasher, Bamshad},
-  booktitle={Proceedings of the 28th ACM Conference on User Modeling, Adaptation and Personalization},
-  pages={239--247},
-  year={2020}
-}
-
-@article{abdollahpouri2020multistakeholder,
-  title={Multistakeholder recommendation: Survey and research directions},
-  author={Abdollahpouri, Himan and Adomavicius, Gediminas and Burke, Robin and Guy, Ido and Jannach, Dietmar and Kamishima, Toshihiro and Krasnodebski, Jan and Pizzato, Luiz},
-  journal={User Modeling and User-Adapted Interaction},
-  volume={30},
-  number={1},
-  pages={127--158},
-  year={2020},
-  publisher={Springer}
-}
-
-@inproceedings{burke2017multisided,
-	address = {Halifax, Nova Scotia},
-	title = {Multisided {Fairness} for {Recommendation}},
-	booktitle = {Workshop on {Fairness}, {Accountability} and {Transparency} in {Machine} {Learning} ({FATML})},
-	author = {Robin Burke},
-	year = {2017},
-	numpages = {5}
-}
-
-@inproceedings{yao2017beyond,
-  title={Beyond parity: Fairness objectives for collaborative filtering},
-  author={Yao, Sirui and Huang, Bert},
-  booktitle={Advances in Neural Information Processing Systems},
-  pages={2921--2930},
-  year={2017}
-}
-
-@inproceedings{kamishima2011fairness,
-  title={Fairness-aware learning through regularization approach},
-  author={Kamishima, Toshihiro and Akaho, Shotaro and Sakuma, Jun},
-  booktitle={2011 IEEE 11th International Conference on Data Mining Workshops},
-  pages={643--650},
-  year={2011},
-  organization={IEEE}
-}
-
-@book{biddle2006adverse,
-  title={Adverse impact and test validation: A practitioner's guide to valid and defensible employment testing},
-  author={Biddle, Dan},
-  year={2006},
-  publisher={Gower Publishing, Ltd.}
-}
-
-@inproceedings{ziegler2005improving,
-  title={Improving recommendation lists through topic diversification},
-  author={Ziegler, Cai-Nicolas and McNee, Sean M and Konstan, Joseph A and Lausen, Georg},
-  booktitle={Proceedings of the 14th international conference on World Wide Web},
-  pages={22--32},
-  year={2005}
-}
-@article{barocas2016big,
-  title={Big data's disparate impact},
-  author={Barocas, Solon and Selbst, Andrew D},
-  journal={Calif. L. Rev.},
-  volume={104},
-  pages={671},
-  year={2016},
-  publisher={HeinOnline}
-}
-
-@book{EEOC2015,
-  title={EEOC Uniform Guidelines on Employment Selection Procedures, 29 C.F.R. §1607},
-  author={},
-  year={2015},
-  publisher={}
-}
-
-@inproceedings{zemel2013learning,
-  title={Learning fair representations},
-  author={Zemel, Rich and Wu, Yu and Swersky, Kevin and Pitassi, Toni and Dwork, Cynthia},
-  booktitle={International Conference on Machine Learning},
-  pages={325--333},
-  year={2013}
-}
-
-@article{kelly1998rate,
-  title={Rate control for communication networks: shadow prices, proportional fairness and stability},
-  author={Kelly, Frank P and Maulloo, Aman K and Tan, David KH},
-  journal={Journal of the Operational Research society},
-  volume={49},
-  number={3},
-  pages={237--252},
-  year={1998},
-  publisher={Springer}
-}
-
-@inproceedings{singh2018fairness,
-  title={Fairness of exposure in rankings},
-  author={Singh, Ashudeep and Joachims, Thorsten},
-  booktitle={Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
-  pages={2219--2228},
-  year={2018}
-}
-
-@misc{tsintzou2018bias,
-      title={Bias Disparity in Recommendation Systems}, 
-      author={Virginia Tsintzou and Evaggelia Pitoura and Panayiotis Tsaparas},
-      year={2018},
-      eprint={1811.01461},
-      archivePrefix={arXiv},
-      primaryClass={cs.IR}
-}
-
-@inproceedings{beutel2019fairness,
-  title={Fairness in recommendation ranking through pairwise comparisons},
-  author={Beutel, Alex and Chen, Jilin and Doshi, Tulsee and Qian, Hai and Wei, Li and Wu, Yi and Heldt, Lukasz and Zhao, Zhe and Hong, Lichan and Chi, Ed H and others},
-  booktitle={Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
-  pages={2212--2220},
-  year={2019}
-}
-
-@misc{ritov2017conditional,
-      title={On conditional parity as a notion of non-discrimination in machine learning}, 
-      author={Ya'acov Ritov and Yuekai Sun and Ruofei Zhao},
-      year={2017},
-      eprint={1706.08519},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
-}
-
-@inproceedings{biega2018equity,
-  title={Equity of attention: Amortizing individual fairness in rankings},
-  author={Biega, Asia J and Gummadi, Krishna P and Weikum, Gerhard},
-  booktitle={The 41st international acm sigir conference on research \& development in information retrieval},
-  pages={405--414},
-  year={2018}
-}
-@article{castillo2019fairness,
-  title={Fairness and transparency in ranking},
-  author={Castillo, Carlos},
-  booktitle={ACM SIGIR Forum},
-  volume={52},
-  number={2},
-  pages={64--71},
-  year={2019},
-  organization={ACM New York, NY, USA}
-}
-@inproceedings{kuhlman2019fare,
-  title={FARE: Diagnostics for Fair Ranking using Pairwise Error Metrics},
-  author={Kuhlman, Caitlin and VanValkenburg, MaryAnn and Rundensteiner, Elke},
-  booktitle={The World Wide Web Conference},
-  pages={2936--2942},
-  year={2019}
-}
-@inproceedings{yang2017measuring,
-  title={Measuring fairness in ranked outputs},
-  author={Yang, Ke and Stoyanovich, Julia},
-  booktitle={Proceedings of the 29th International Conference on Scientific and Statistical Database Management},
-  pages={1--6},
-  year={2017}
-}
-
-@article{beel2016towards,
-  title={Towards reproducibility in recommender-systems research},
-  author={Beel, Joeran and Breitinger, Corinna and Langer, Stefan and Lommatzsch, Andreas and Gipp, Bela},
-  journal={User modeling and user-adapted interaction},
-  volume={26},
-  number={1},
-  pages={69--101},
-  year={2016},
-  publisher={Springer}
-}
 
 @article{Ekstrand_2020,
    title={LensKit for Python: Next-Generation Software for Recommender Systems Experiments},
@@ -239,33 +11,6 @@ series = {RecSys ’19}
    year={2020},
    month={Oct}
 }
-
-@article{rendle2012factorization,
-	author = {Rendle, Steffen},
-	title = {Factorization Machines with {libFM}},
-	journal = {CM Transactions on Intelligent Systems and Technology (TIST)},
-	issue_date = {May 2012},
-	volume = {3},
-	number = {3},
-	month = May,
-	year = {2012},
-	issn = {2157-6904},
-	pages = {57:1--57:22},
-	articleno = {57},
-	numpages = {22},
-	publisher = {ACM},
-	address = {New York, NY, USA},
-}
-
-@misc{zhang2019deeprec,
-      title={DeepRec: An Open-source Toolkit for Deep Learning based Recommendation}, 
-      author={Shuai Zhang and Yi Tay and Lina Yao and Bin Wu and Aixin Sun},
-      year={2019},
-      eprint={1905.10536},
-      archivePrefix={arXiv},
-      primaryClass={cs.IR}
-}
-
 
 
 @inproceedings{Sonboli2020FARLA,
@@ -291,6 +36,14 @@ series = {RecSys '20}
   booktitle={Proceedings of the 26th International Joint Conference on Artificial Intelligence},
   pages={1725--1731},
   year={2017}
+}
+
+@inproceedings{guo2015librec,
+  title={LibRec: A Java Library for Recommender Systems.},
+  author={Guo, Guibing and Zhang, Jie and Sun, Zhu and Yorke-Smith, Neil},
+  booktitle={UMAP Workshops},
+  volume={4},
+  year={2015}
 }
 
 @inproceedings{wu2016collaborative,
@@ -327,21 +80,7 @@ series = {RecSys '20}
       primaryClass={cs.LG}
 }
 
-@inproceedings{mehtora2018towards,
-author = {Mehrotra, Rishabh and McInerney, James and Bouchard, Hugues and Lalmas, Mounia and Diaz, Fernando},
-title = {Towards a Fair Marketplace: Counterfactual Evaluation of the Trade-off between Relevance, Fairness \& Satisfaction in Recommendation Systems},
-year = {2018},
-isbn = {9781450360142},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3269206.3272027},
-doi = {10.1145/3269206.3272027},
-pages = {2243–2251},
-numpages = {9},
-keywords = {satisfaction, marketplace, fairness},
-location = {Torino, Italy},
-series = {CIKM '18}
-}
+
 
 @inproceedings{joachims2018reveal,
   title={REVEAL 2018: offline evaluation for recommender systems},
@@ -383,7 +122,7 @@ series = {CIKM '18}
   year={2020}
 }
 
-@techreport{bird2020fairlearn,
+@article{bird2020fairlearn,
   title={Fairlearn: A toolkit for assessing and improving fairness in AI},
   author={Bird, Sarah and Dud{\'\i}k, Miro and Edgar, Richard and Horn, Brandon and Lutz, Roman and Milan, Vanessa and Sameki, Mehrnoosh and Wallach, Hanna and Walker, Kathleen},
   journal={Microsoft, Tech. Rep. MSR-TR-2020-32},
@@ -453,21 +192,6 @@ series = {CIKM '20}
   year={2019}
 }
 
-@inproceedings{surer2018multistakeholder,
-  title={Multistakeholder recommendation with provider constraints},
-  author={S{\"u}rer, {\"O}zge and Burke, Robin and Malthouse, Edward C},
-  booktitle={Proceedings of the 12th ACM Conference on Recommender Systems},
-  pages={54--62},
-  year={2018}
-}
-
-@inproceedings{patro2020fairrec,
-  title={Fairrec: Two-sided fairness for personalized recommendations in two-sided platforms},
-  author={Patro, Gourab K and Biswas, Arpita and Ganguly, Niloy and Gummadi, Krishna P and Chakraborty, Abhijnan},
-  booktitle={Proceedings of The Web Conference 2020},
-  pages={1194--1204},
-  year={2020}
-}
 
 @inproceedings{mansoury2020fairmatch,
   title={Fairmatch: A graph-based approach for improving aggregate diversity in recommender systems},
@@ -477,16 +201,7 @@ series = {CIKM '20}
   year={2020}
 }
 
-@article{koren2009matrix,
-  title={Matrix factorization techniques for recommender systems},
-  author={Koren, Yehuda and Bell, Robert and Volinsky, Chris},
-  journal={Computer},
-  volume={42},
-  number={8},
-  pages={30--37},
-  year={2009},
-  publisher={IEEE}
-}
+
 
 @inproceedings{li2017neural,
   title={Neural rating regression with abstractive tips generation for recommendation},
@@ -565,21 +280,6 @@ pages = {136–143},
 numpages = {8}
 }
 
-@inproceedings{steck2018calibrated,
-  title={Calibrated recommendations},
-  author={Steck, Harald},
-  booktitle={Proceedings of the 12th ACM conference on recommender systems},
-  pages={154--162},
-  year={2018}
-}
-@inproceedings{ekstrand2018all,
-  title={All the cool kids, how do they fit in?: Popularity and demographic biases in recommender evaluation and effectiveness},
-  author={Ekstrand, Michael D and Tian, Mucun and Azpiazu, Ion Madrazo and Ekstrand, Jennifer D and Anuyah, Oghenemaro and McNeill, David and Pera, Maria Soledad},
-  booktitle={Conference on Fairness, Accountability and Transparency},
-  pages={172--186},
-  year={2018},
-  organization={PMLR}
-}
 @article{ekstrand2021exploring,
   title={Exploring author gender in book rating and recommendation},
   author={Ekstrand, Michael D and Kluver, Daniel},
@@ -587,15 +287,6 @@ numpages = {8}
   pages={1--44},
   year={2021},
   publisher={Springer}
-}
-
-@inproceedings{burke2018balanced,
-  title={Balanced neighborhoods for multi-sided fairness in recommendation},
-  author={Burke, Robin and Sonboli, Nasim and Ordonez-Gauger, Aldo},
-  booktitle={Conference on Fairness, Accountability and Transparency},
-  pages={202--214},
-  year={2018},
-  organization={PMLR}
 }
 
 
@@ -691,7 +382,7 @@ isbn = {9781450368599},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3340531.3412778},
-booktitle = {Proceedings of the 29th ACM International Conference on Information &amp; Knowledge Management},
+booktitle = {Proceedings of the 29th ACM International Conference on Information \& Knowledge Management},
 pages = {2999–3006},
 numpages = {8}
 }
@@ -750,4 +441,20 @@ series = {RecSys '20}
   author = {Nicolas Hug},
   title = {Surprise: A Python library for recommender systems},
   journal = {Journal of Open Source Software}
+}
+
+@inproceedings{burke2020facct_libauto,
+author = {Burke, Robin Douglas and Mansoury, Masoud and Sonboli, Nasim},
+title = {Experimentation with Fairness-Aware Recommendation Using Librec-Auto: Hands-on Tutorial},
+year = {2020},
+isbn = {9781450369367},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3351095.3375670},
+doi = {10.1145/3351095.3375670},
+booktitle = {Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency},
+pages = {700},
+numpages = {1},
+location = {Barcelona, Spain},
+series = {FAT* '20}
 }
