--- a/chapter3-methodology.tex
+++ b/chapter3-methodology.tex
@@ -1,66 +1,147 @@
-\chapter{Methodology}
-\label{methodology}
+\chapter{Experimental Method Setups}
+\label{chap:methodology}
+
+
+Personalized recommendation is domain-specific, in other words algorithms that work in one setting might work poorly in others that might have different characteristics. \cite{}
+In this Chapter, I will describe the datasets, data pre-processing, data transformation, as well as recommendation and re-ranking algorithms that were used as baseline to perform experiments on them throughout this dissertation. 
+Additionally, experimental details such as hyper-parameter tuning, the choice of the model and the choice of the protected attribute(s) in each dataset will be explained thoroughly. For my experiments, I have used and/or extended \libauto{}, a recommendation library that I worked on during the course of my PhD. The extended algorithms were added as part of my contribution to \libauto{} or LibRec itself. I will describe \libauto{}'s capabilities and architecture in details in Chapter \ref{librec-auto}.
+
+
+\section{Context}
+
+\todo{complete this, read the NSF case and the ai magazine talking about it}
+
+Loan recommendation, as in the case of Kiva is a suitable candidate for the exploration of recommendation fairness due to several reasons. One of them is that fairness requirements are driven by the internal needs surrounding Kiva's philanthropic mission to provide equitable access to capital for its borrowers regardless of their demographic information such as gender, the country of origin, etc., as well as other characteristics e.g. the economic sector for which they need the loan. Another reason reason on the suitability of Kiva is as follows: Kiva's users will be more receptive of the fairness-oriented interventions in recommendations due to its philanthropic nature whereas the users of a movie streaming website such as Netflix, might not care to be fair to the movie producers. 
+
+Movie recommendation might not be an obvious candidate for fairness-aware recommendation of course, since it is a domain of pure individual taste. Following the example of \cite{yao2017beyond}, our approach is to construct an artificial equity scenario within both MovieLens 1M and The Movies data for expository purposes only, with the understanding that real scenarios can be approached with a similar methodology. Note that this dataset is among the very few datasets with user demographic information for the use case of consumer-side fairness.
+
+Furthermore, we will describe the choice of the protected attribute(s) and the transformation methods used to produce them in each dataset in this Chapter.
+
 
 \section{Datasets}
 
-Experiments were performed on the following publicly and proprietary datasets: MovieLens\cite{movielens}, The Movies dataset\footnote{https://www.kaggle.com/rounakbanik/the-movies-dataset}, Kiva dataset, and Yelp dataset\todo{do we need that?}. The characteristics of the datasets are summarized in Table \todo{create a table for them}, we also we describe how we have chosen our protected attributes. 
-% In this section we describe the characteristics of the datasets we have used and how we have chosen our protected and unprotected features.
+The experiments were performed on the following publicly and/or proprietary datasets: MovieLens\cite{movielens}, The Movies dataset\footnote{https://www.kaggle.com/rounakbanik/the-movies-dataset}, and two variations of Kiva dataset: proprietary and publicly accessible data.
+It's worth mentioning that an anonymized data was created based on the proprietary Kiva dataset which was used in my experimentation that we are allowed to share with the research community with Kiva's permission.
+\todo{is it correct?}
+
+ \todo{Yelp dataset. do we need that?}
+
+
+The characteristics of the previously mentioned datasets are summarized in Table \todo{create a table for them}.  
+% Dataset & #users, #items, #ratings, rating scale, density, consumer, provider, protected attribtue, access (public or private)
 
     \subsection{MovieLens 1M Dataset}
-    For some of our experiments, we are using the well-known MovieLens 1M dataset~\cite{movielens}. This dataset is a movie rating dataset and was collected by the GroupLens research group. It contains gender information for each user, as well as ratings of 4,000 movies by 6,000 users. The density of this dataset is 4.47\%.
+    For some of our experiments, we are using the well-known MovieLens 1M dataset~\cite{movielens}. This dataset is a movie rating dataset that was collected by the GroupLens research group. This dataset contains 1,000,209 ratings from 6,000 users on 4,000 movies. The sparsity of MovieLens is 4.47\%. All of the users in the MovieLens data set rated at least 20 movies.
+    Besides user ratings, this dataset contains, some additional information on ratings, users and the movies. The rating information consist of ratings (only whole ratings), and the timestap of the ratings (in terms of seconds). The movie information consists of movie titles and 18 movie genre(s) (e.g. "Animation", "Comedy"). It also contains user information such as: gender (binary, represented by F and M), age (split into 7 buckets), 20 occupations (e.g. "academic/educator", "artist") and zip-code.
     
-    \todo{extra info, combine}
-    It contains 1,000,209 ratings from 6,040 users over 3,706 movies, covering 18 movie genres (e.g. "Animation", "Comedy"). The sparsity of MovieLens is 4.47\%. All of the users in the MovieLens data set rated at least 20 movies. 
+        \subsubsection{protected feature(s)}
+        The choice of the protected features firstly depend on the stakeholder for which we are seeking fairness, and secondly it depends on the context and the previously detected unfairness or biases in the dataset. Since, there exists information about both the consumers (of the recommendations) and the providers (of the recommendations), it is possible to propose solutions both for the consumer-side and provider-side fairness.
+        
+        % balanced neighborhood
+        In Chapter \todo{refer to balanced neighborhood}, we propose BLN-SLIM, an in-processing approach to mitigate both consumers' (BLN-SLIM-U) and providers' (BLN-SLIM-I) biases. Note that this approach takes a single binary protected attribute as input to the algorithm.
+        
+        Although, we use MovieLens dataset for only the consumer-side fairness for this experiment and the Kiva dataset for the provider-side fairness. We choose the movie genre as our protected attribute. One can use any other movie attribute. For example \cite{kamishima2018recommendation} chose the release year of the movie as the protected attribute.
+        
+        It can be seen in this data that there is a minority of female users (1709 out of the total of 6040). Certain genres display a discrepancy in recommendation delivery to male and female users. For example, in the ``Crime'' genre, female users rate a very similar number of movies (average of 0.048\% of female profiles vs 0.049\% of male profiles) and rate them similarly: an average rating of 3.7 for both female and male users. However, our baseline unmodified SLIM-U algorithm recommends in the top 10 an average of 1.10 ``Crime'' movies per female user as opposed to 1.18 such movies to male users. 
+        
+        Given that the rating profiles are similar but the recommendation outcomes are different, we can therefore conclude that the female users experience a deprivation of ``Crime'' movies compared to their male counter-parts. Similar losses can be observed for other genres. We are not asserting that there is any harm associated with this outcome. It is sufficient that these differences allow us to validate the properties of the BN-SLIM-U algorithm.
+        
+        In order to achieve genre discrepancy, within the MovieLens 1M dataset, we calculated the equity score (explained in \todo{where?}) and selected the five genres on which the baseline SLIM-U algorithm produced the lowest equity scores (e.i. $E_c@k$) : ``Film-Noir'', ``Mystery'', ``Horror'', ``Documentary'', and ``Crime''. Note that low equity scores are undesirable.
+        
+        \todo{should I summarize these explanations in the bln-slim chapter? if not, do I need to add a picture here?}
 
-        \subsubsection{Protected features for single-fairness}
-        Movie recommendation is, of course, a domain of pure individual taste and therefore not an obvious candidate for fairness-aware recommendation. 
-        Following the example of \cite{yao2017beyond}, our approach to construct an artificial equity scenario within this data for expository purposes only, with the understanding that real scenarios can be approached with a similar methodology.
+
 
     \subsection{The Movies Dataset}
     
-    This dataset was obtained from the Kaggle website and contains the metadata of 45,000 movies listed in the full MovieLens Dataset \footnote{https://grouplens.org/datasets/movielens} which were released on or before July 2017. Although movies are not a domain to which important fairness concerns are typically applied, we use this dataset as a well-known example with a rich set of provider-side features. The dataset contains 26 million ratings from 270,000 users for all 45,000 movies. Ratings are on a scale of 1-5. Each movie contains a set of features from which the following were used in this project: genres, original language, release date, revenue, run-time, popularity, production countries and spoken language. A sample of this dataset was extracted which contained the 559,070 ratings from 6,000 users on 14,623 items (density of 0.63\%).
+    This dataset is also a movie recommendation dataset which was obtained from the Kaggle website. It contains the metadata of 45,000 movies listed in the full MovieLens Dataset \footnote{https://grouplens.org/datasets/movielens} which were released on or before July 2017. As we mentioned before, movies are not a domain to which important fairness concerns are typically applied, we use this dataset as a well-known example with a rich set of provider-side features. The dataset contains 26 million ratings from 270,000 users for all 45,000 movies. Ratings are on a scale of 1-5.
+    
+    From the movies' set of features, the following were used in this project: genres, original language, release date, revenue, run-time, popularity, production countries and spoken language. A sample of this dataset was extracted which contained the 559,070 ratings from 6,000 users on 14,623 items (density of 0.63\%).
 
-    All the features were transformed into categorical variables. If the movie's popularity is greater than the average popularity, we tag the movie as popular and unpopular otherwise. We transform the revenue and run-time in the same way as well. The release date is bucketed into old and new if the movie's release date is before or after 1990 \cite{kamishima2016model}. All the categorical features were transformed into dummy variables, resulting in a total of 323 binary features.
+    All the selected features were then transformed into categorical variables. If the movie's popularity is greater than the average popularity, we tag the movie as popular and unpopular otherwise. We transform the revenue and run-time in the same way as well. The release date is bucketed into old and new if the movie's release date is before or after 1990 \cite{kamishima2016model}. All the categorical features were transformed into dummy variables, resulting in a total of 323 binary features (21 genres, 2 popularity buckets (popular and unpopular), 2 year buckets (old, and new), 2 revenue buckets (low, and high), 2 run-time buckets (short, and long), 133 languages and 161 production countries).
+    
+        \subsubsection{Protected feature(s)}
 
-        \subsubsection{Protected features for multi-concern provider fairness}
-        \todo{should this be moved somewhere else}
-        This dataset was used in Chapter \ref{fairness_postproc} for the to incorporate a multi-concern fairness definition in ht post-processing approach.
-        
-        For the purposes of exposition, we selected two features in this dataset along which to identify protected features, although the OFAiR algorithm in Chapter \ref{fairness_postproc} supports any number of sensitive features. In the Movies Dataset, we identified the following protected classes within each feature: ``unpopular'' (popularity), ``lower revenue'' (revenue) , ``longer'' (running time), ``before 1990'' (release date), some genres and movies the were produced in some non-US countries. More specifically, in our experiments, within genre and production country features we chose ``Horror'', ``Music'', ``Mystery'', ``History'' (genres) and ``CA'', ``ES'', ``DE'', ``HK'' (countries) to be the protected group. These feature values were chosen because they represented a minority within each feature, and so are good exemplars for demonstrating the capabilities of our algorithm.
-
-
+        This dataset was used in Chapter \ref{fairness_postproc} \todo{reference or add info about the dynamic fairness thing} to incorporate a multi-concern fairness definition in a post-processing approach. In other words, the goal is to mitigate unfair exposure (either too high for some and too low for some) in multiple sensitive attributes (e.g. country, and economic sector, and gender, and etc.) for the providers at the same time. This dataset was also used in \todo{dynamic fairness}, to address all the fairness concerns one at a time.
+    
+        Since we need to address the unfairness issue in all of these features, we need to select the protected group within each one of them.
+        We identified the following protected classes within each category: ``unpopular'' (popularity), ``lower revenue'' (revenue) , ``longer'' (running time), ``before 1990'' (release date), ``Horror'', ``Music'', ``Mystery'', ``History'' (genres), and ``CA'', ``ES'', ``DE'', ``HK'' (countries). These feature categories were chosen because they represented a minority within each category.
+    
+        This dataset is rich in movie metadata that one can use for the study of fairness in recommendation. As an example, this dataset contains the metadata about the cast and the crew for each movie: such as the gender (non-binary) information of the director(s) and the writer(s), the number of people from each gender in the director team or the writer team, etc. Although, we didn't use this information in our experiments.
 
     \subsection{Kiva dataset}
-    Some of the collected data in \todo{balanced neighborhood slim, the provider side} was extracted from the Kiva.org microlending site using the site's API\footnote{http://build.kiva.org/}.
-    %protected value: higher than average number of unfunded loans
+    \todo{changing our to my and we to I}
+    This dataset is a proprietary dataset obtained from Kiva Microloans, a microlending site. And some of the collected data was extracted from the Kiva.org site using the site's API\footnote{http://build.kiva.org/}.
+    % protected value: higher than average number of unfunded loans
     
-    Our algorithms are also evaluated on a proprietary dataset obtained from Kiva.org, including all lending transactions over an 12-month period. Initially, there were 1,084,521 transactions involving 122,464 loans and 207,875 Kiva users. Of these loans, we found that 116,650 were funded, that is they received their full funding amount from Kiva users by the 30-day deadline imposed by the site. We selected only the funded loans for analysis. Each loan is specified by features including borrower's name/id, gender, borrower's country, loan purpose, funded date, posted date, loan amount, loan sector, and geographical coordinates. 
+    It includes all lending transactions over a 12-month period. Initially, there were 1,084,521 transactions involving 122,464 loans and 207,875 Kiva users.
+    
+    Of the 122,464 loans, we found that 116,650 were funded, that is they received their full funding amount from Kiva users by the 30-day deadline imposed by the site. Loans not fully funded within 30 days are dropped from the system and the money raised is returned to lenders.
+    
+    We selected only the funded loans for analysis. Each loan is specified by features including borrower's name/id, gender, borrower's country, loan purpose, funded date, posted date, loan amount, loan sector, and geographical coordinates such as geo-location, town, country and region of the borrower and the number of lenders who lent money to this loan.
+    
     To reduce the feature space, and to solve the multicollinearity problem, highly correlated features were removed. The percentage funding rate (PFR) was added as a new feature, computed as follows:
     
     \begin{equation}
      \mbox{\textit{PFR}} =  \frac{1}{\mbox{\textit{{\#} days to fund}}} * 100 
     \end{equation}
     
-    The percentage funding rate captures the speed at which a loan goes from being introduced in the system to being fully funded.\footnote{Loans not fully funded within 30 days are dropped from the system and the money raised is returned to lenders.} For example, a loan with PFR of 25\% is accumulating a quarter of its needed capital each day. After preparing the data, the final features for each loan reduced to borrower's gender, borrower's country, loan purpose, loan amount (binned to 10 equal-sized buckets), and loan's percentage funding rate. We found that this dataset was highly sparse (density = $4.2e^{-5}$) and could not support effective collaborative recommendation, because a loan can only attract a limited amount of support (up to that needed for its funding). There are no ``blockbuster'' loans with thousands of lenders.
+    The percentage funding rate captures the speed at which a loan goes from being introduced in the system to being fully funded. For example, a loan with PFR of 25\% is accumulating a quarter of its needed capital each day. After preparing the data, the final features for each loan reduced to borrower's gender, borrower's country, loan purpose, loan amount (binned to 10 equal-sized buckets), and loan's percentage funding rate. 
     
-    To generate a denser dataset with greater potential for user profile overlap, we applied a content-based technique creating \textit{pseudo-items} that represent groups of items with shared features. We applied agglomerative hierarchical clustering \cite{rokach2005clustering} using the features of borrower gender, borrower country, loan purpose, loan amount (binned to 10 equal-sized buckets), and percentage funding rate (4 equal-sized buckets). We chose the cluster with the highest Silhouette Coefficient \cite{rousseeuw1987silhouettes} of around 0.69 which indicates a reasonable cohesion of the clusters. Then we applied a 10-core transformation, selecting pseudo-items with at least 10 lenders who had funded at least 10 pseudo-items. The retained dataset has 2,673 pseudo-items, 4,005 lenders and 110,371 ratings / lending actions.
+    The transaction file included the lender's hashed id, lender's username, loan id, time of "purchase" or lending, the lent amount by that user, and the lending team id that that user is part of. A lender can be a part of one or several lending teams. These teams advocate for a specific cause for example agriculture, or are in support of a specific country such as Vietnam. We removed the lender user id, lending team id and the time of purchase id from the transactions file. The final columns were user's hashed id, loan id and the lent amount.
     
+    
+    We found that this dataset was highly sparse (density = $4.2e^{-5}$) and could not support effective collaborative recommendation, because a loan can only attract a limited amount of support (up to that needed for its funding). There are no ``blockbuster'' loans with thousands of lenders.
+    
+    To generate a denser dataset with greater potential for user profile overlap, we applied a content-based technique creating \textit{pseudo-items} that represent groups of items with shared features. We applied agglomerative hierarchical clustering \cite{rokach2005clustering} using the features of borrower gender, borrower country, loan purpose, loan amount (binned to 10 equal-sized buckets), and percentage funding rate (4 equal-sized buckets). We chose the cluster with the highest Silhouette Coefficient \cite{rousseeuw1987silhouettes} of around 0.69 which indicates a reasonable cohesion of the clusters. Note that there weren't any singleton clusters.
+    
+    After creating the feature file for psuedo loans, we transformed the lent amounts to ratings. We replace the loan id with the pseudo-loan id if that loan id exists in that cluster. Also, if a lender has lent to multiple loans in the same cluster(pseudo-loan), summation of all the lent amount is considered as one transaction since it shows how strong the interest of that lender to that item is.
+    To transform the loan amount to ratings, for every user, we collected all the transactions on the pseudo-loans she has interacted with. We collected the lent amounts to each pseudo-loan and finally normalized it using the min-max normalization method in scikit-learn \cite{scikit-learn} to values between 3.0 and 5.0. Since ratings of 1s and 2s are considered as dislikes, since, if a lender hadn't liked a loan, she/he probably wouldn't have lent it any amount of money. Therefore, I set the minimum to 3.0. The min-max normalization is computed for every user separately over all her/his lent amounts.
+
+    To make the dataset denser, we applied a 10-core transformation, selecting pseudo-items with at least 10 lenders who had funded at least 10 pseudo-items. The retained dataset has 2,673 pseudo-items, 4,005 lenders and 110,371 ratings / lending actions.
+    
+        % \subsubsection{kiva data collected from api}
+        % The provider information in this Kiva dataset were collected from Kiva's API in September 2016. It contains approximately 1 million loans funded by approximately 180,000 lenders.
+
+    \todo{true?}
+    The final condensed dataset that were used in our experiments includes the pseudo items and the ratings behavior of lenders with them. Loan requests contain information about the borrowers, but the process of pseudo item creation hides and combines that information with the information of many other borrowers, therefore it protects the privacy of the borrowers. Also, no information about the lenders are relieved since their specific rating behavior is eliminated to a great extend. The final rating file essentially consists of the lenders' general lending behavior trends of users. In a way, both of our stakeholders (lenders and loans/borrowers) have now turned into pseudo-items and pseudo-users.
+    As the privacy of the borrowers and the lenders are now protected, with the permission of Kiva, I have made this dataset available to use for the research community. This version of the Kiva dataset, is one of my contributions.\todo{yea?}
 
 
-        \subsubsection{Protected features for multi-concern provider fairness}
-        \todo{1.should this be moved somewhere else}
-        \todo{2.do we need a plot hear?}
-        In this dataset, we observed an imbalance within the following feature values/dimensions: (percentage funding rate), (country), (economic sector), (loan amount), (borrower gender). In keeping with Kiva's mission of providing equal access to capital across regions and economic sectors, we designate the items from the sectors and countries that have less than 1\% frequency in the training data as the protected group. More specifically 5 loan purposes in the economic sectors and 23 countries were selected to be the protected group. 
-        % Although in both datasets we chose two features to achieve fairness within their multiple dimensions, our method supports choosing any number of such features.
-        % \vspace{1cm}
+        \subsubsection{Protected features}
+        In this dataset, we observed an imbalance within the following feature values/dimensions: (percentage funding rate), (country), (economic sector), (loan amount), (borrower gender). In keeping with Kiva's mission of providing equal access to capital across regions and economic sectors, we designate the items from the sectors and countries that have less than 1\% frequency in the training data as the protected group. As an example, 5 loan purposes in the economic sectors and 23 countries were selected to be the protected group. Note that we use Kiva dataset only for mitigating \textit{provider-side} unfairness either in one dimension or multiple-dimensions.
         
-        \subsubsection{Protected features for single-fairness}
-        For approaches that take only a single attribute, we set the protected attribute as the geographical regions in the world (e.g. )
+        We have used all these "fairness concerns" (or dimensions) in the OFAiR method explained in Chapter \ref{fairness_postproc} since OFAiR addresses multiple fairness concerns simultaneously. In Chapter \todo{where is dynamic fairness?}, we use all the previously mentioned fairness concerns, but unlike OFAiR, the proposed method, tries to mitigate bias in each fairness concern on at a time.
+        
+        In some of our research projects we have considered (region) instead of (country). Since these two features are highly correlated they both carry the same information and can be used interchangeably. In Chapter \ref{fairness_postproc} in the FAR/OFAR method and in Chapter \ref{fairness_inproc} in the Balanced neighborhood SLIM approach, we target the (region) feature.
+        
+        Kiva.org divides its borrowers into 9 geographic regions. We are defining the protected group as those regions of the world where it appears to be more difficult to fund loans. (In Kiva.org, a loan that does not attract enough lenders over a 30 day period is marked as unfunded and dropped from the system.) Therefore, we are promoting the loans that have not grabbed the lenders attention so far and help them get funded faster. Note that the assumption behind this method is that all the loan requests are equal regardless of all their information, in other words the more popular loans are not better than the less popular ones.
+        
+        In our dataset, we find that there are some geographic regions with a higher than average number of unfunded loans. In these regions, borrowers have a lower probability of getting the desired capital. As shown in Table~\ref{tab:unfunded}, the regions of North America, Eastern Europe, South America, and Asia have proportionately more funded loans than the regions of Africa, Middle East, and Central America\footnote{Our data set had only a single loan request from Australia.}. These regions where borrowers have lower funding percentages are treated as the protected group in our experiments.
+        
+        \begin{table}
+            \centering
+        \begin{tabular}{l|l|r}
+            Category & Region & Unfunded \% \\ \hline
+            Unprotected & North America & 1.73 \\
+            & Eastern Europe & 0.99 \\
+            & South America & 4.33 \\
+            & Asia & 6.70 \\ \hline
+            Protected & Africa & 10.57 \\
+            & Middle East & 13.23 \\
+            & Central America & 8.81 \\
+        \end{tabular}
+            \caption{Percentage of unfunded loans by region}
+            \label{tab:unfunded}
+        \end{table}
+ 
 
+\begin{comment}
     \subsection{Yelp dataset}
     
     The original Yelp.com data included 6.7 million reviews from 1.6 million users on 192,609 businesses from different industries. We used a filtered subset, Yelp\_core40 \cite{mansoury2019bias}, which includes users who rated at least 40 businesses and businesses which were rated by at least 40 users. In the Yelp\_core40, there are many business categories  (e.g. car dealers, airports, or different types of restaurants, etc.). We limited the data set to restaurant/food establishments, using both "restaurant" and "food" labels for filtering. After pre-processing, the data set included 85,041 ratings by 1,355 users over 1,077 restaurants, covering 231 categories. The sparsity of Yelp is 5.83\%. The categories are defined by the labels provided in the original Yelp data set. Some of the categories are very popular (e.g. "American (New)", "Breakfast \& Brunch", etc.), while some of them are extremely specific (e.g. "Pretzels", "Shaved snow", etc.). There were also many establishments with multiple labels, which meant that they belonged to different item categories. 
 
+\end{comment}
 
 \section{Evaluation Metrics}
     \subsection{Accuracy}
@@ -235,5 +316,5 @@ Experiments were performed on the following publicly and proprietary datasets: M
         
         Each recommendation algorithm involves several hyperparameters. To identify the best-performing sets of hyperparameters for each algorithms, I performed gridsearch on hyperparameters space and selected the results with the highest precision for the next analysis. Table 5.2 shows the hyperparameter values that gridsearch was performed.
         
-\section{Standardizing & automating Fairness related experiments}
+\section{Standardizing and automating Fairness related experiments}
 ????
